# jai-agent-accelerator

./: .gitignore  LICENSE  README.md  docker-compose.yml
apps/agent/: .dockerignore  Dockerfile  langgraph.json  pyproject.toml
apps/agent/src/pmm_agent/: __init__.py  agent.py  prompts.py  server.py
apps/agent/src/pmm_agent/tools/: __init__.py  intake.py  planning.py  research.py  risk.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite-env.d.ts  vite.config.ts
apps/web/public/: _redirects
apps/web/src/: App.tsx  index.css
config/domains/: pmm.json
docs/: CUSTOMIZATION.md  DEPLOYMENT.md  METHODOLOGY.md
marketing/: lemonsqueezy-product-copy.md
