[project]
name = "preprod-agent"
version = "0.1.0"
description = "PMM Deep Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",  # Add this
    "langchain",
    "langchain-anthropic",
    "langchain-core",
    "langgraph"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preprod_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
